<resources>
    <string name="app_name">NguyenTanLinh_2122110398</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="welcome_to_dream_food">Welcome to Dream Food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_register">Already Register ?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favorite">Favorite</string>
    <string name="my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="tan_linh">Tấn Lĩnh</string>
    <string name="linhnguyentan24_gmail_com">linhnguyentan24@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="nguyen_tan_linh">Nguyễn Tấn Lĩnh</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_store_app">My Store App</string>
</resources>