<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumGray"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/img_acc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/baseline_person_24"
        android:layout_marginTop="100dp"
        android:foreground="@drawable/border_circle"
        android:layout_centerHorizontal = "true"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nguyen_tan_linh"
        android:textAllCaps="true"
        android:fontFamily="@font/amita"
        android:textColor="@color/purple_700"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_below = "@+id/img_acc"
        android:layout_centerHorizontal = "true"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linhnguyentan24_gmail_com"
        android:textColor="@color/purple_700"
        android:layout_below="@+id/name"
        android:fontFamily="@font/amita"
        android:layout_centerHorizontal = "true"/>

    <Button
        android:id="@+id/btn_logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="logOut"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:fontFamily="@font/amita"
        android:textSize="18dp"
        android:padding="12dp"
        android:textStyle="bold"/>

</RelativeLayout>